fix image preview alignment to be centered on the screen

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -50,7 +50,7 @@
   border: 0 solid white;
   margin: 0;
   padding: 0;
-  width: 21px;
+  flex: 0 0 21px;
   height: 18px;
   align-self: center;
 }
