--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,15 +1,13 @@
 .footer {
   max-width: 880px;
-  margin-top: 67px;
-  margin-bottom: 60px;
+  margin: 67px auto 60px;
 }
 
 .footer__copyright {
   color: rgba(84, 84, 84, 1);
-  font-family: Inter, Arial, Arial, Helvetica, sans-serif;
   font-size: 18px;
   line-height: 1.2;
-  padding: 100px 50px;
+  padding: px 100px;
   margin: 0;
 }
 
