--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -8,8 +8,6 @@
   color: black;
   z-index: 999;
   padding: 0 19px;
-  /* align-items: center;
-  justify-content: center; */
   display: flex;
   visibility: hidden;
   opacity: 0;
@@ -99,19 +97,18 @@
   margin: 0 0 54px;
 }
 
-.modal__field {
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-top: 54px;
+}
+
+.modal__input {
   padding: 0;
   margin: 29px 0 0;
   border: none;
   border-bottom: 1px solid #000000;
-}
-
-.modal__form {
-  display: flex;
-  flex-direction: column;
-}
-
-.modal__input {
   padding: 0 0 0 2px;
   border-width: 0 0 1px 0;
   line-height: 17px;
@@ -175,14 +172,18 @@
 
 .modal__error {
   font-family: "Inter", Arial, sans-serif;
+  line-height: 12px;
+  position: absolute;
   font-size: 12px;
   max-width: 358px;
-  /*this is the bottom margin of the input*/
+  top: calc(100% + 6px);
   min-height: 30px;
+  left: 0;
   display: block;
   margin-left: 36px;
   font-size: 12px;
   color: red;
+  transition: opacity 1s;
 }
 
 .modal__error_active {
@@ -195,7 +196,7 @@
     border: 1px solid #000000;
   }
 
-  .modal__field {
+  .modal__input {
     width: 238px;
     height: 46px;
     margin: 45px 22px 25px 22px;
@@ -241,7 +242,7 @@
     margin: 45px 22px 25px 22px;
   }
 
-  .modal__field {
+  .modal__input {
     width: 238px;
     height: 27px;
     margin: 30px 22px 0 22px;
@@ -259,20 +260,26 @@
 /*image preview*/
 .modal__preview-container {
   position: relative;
-  width: 240px;
-  height: 299px;
-  margin: 0 40px 0 40px;
+  margin: auto;
 }
 
 .modal__image-preview {
-  width: 240px;
-  height: 299px;
-  top: 136px;
-  left: 40px;
+  max-width: 100%;
+  max-height: 540px;
 }
+
 @media screen and (max-width: 450px) {
   .modal__close_type_form {
     bottom: calc(100% + 14px);
     left: calc(100% - 26px);
   }
+}
+.modal__input {
+  width: 358px;
+  height: 27.26px;
+  top: 306px;
+  left: 461px;
+  gap: 0px;
+  border: 1px 0px 0px 0px;
+  opacity: 0px;
 }
